@@ -197,14 +197,6 @@ class DIFF extends UTIL
         exit(1);
     }
 
-    function display_error_usage_exit($msg)
-    {
-        if( PH::$shadow_json )
-            PH::$JSON_OUT['error'] = $msg;
-        else
-            fwrite(STDERR, PH::boldText("\n**ERROR** ") . $msg . "\n\n");
-        $this->display_usage_and_exit();
-    }
 
     function endsWith($haystack, $needle) {
         $length = strlen($needle);
